[package]
name = "complexcity"
version = "0.8.0"
edition = "2021"
authors = ["Calliméthée"]
publish = false
exclude = ["dist", "build"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]


[dependencies]
bevy = "0.12.1"
rand = "0.8.5"

[build-dependencies]
embed-resource = "2.4.0"
